--- a/python/Node/package.json
+++ b/python/Node/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
-      "start": "npx tailwindcss -i ../static/css/tailwinds.in.css -o ../static/css/tailwinds.out.css --watch"
+      "start": "npx tailwindcss -i ../Static/css/tailwinds.in.css -o ../Static/css/tailwinds.out.css --watch"
     },
     "devDependencies": {
       "tailwindcss": "^3.3.3"
