--- a/python/Application/package.json
+++ b/python/Application/package.json
@@ -9,6 +9,7 @@
 		"axios": "^1.6.7",
 		"prettier": "^3.2.4",
 		"react": "^18.2.0",
+		"react-confirm-alert": "^3.0.6",
 		"react-dom": "^18.2.0",
 		"react-query": "^3.39.3",
 		"react-router-dom": "^6.21.3",
